Changes for 3.4.8rc1

New features:

Bug fixes:
..F....... [ZBX-12940] fixed content does not fit dialog window (agriscenko)
..F....... [ZBX-13401] fixed successful items mass update with invalid update interval (agriscenko)
..F....... [ZBX-13342] fixed order by query in frontend Maintenance tab (agriscenko)
A......... [ZBX-6167] fixed partial updating in maintenance.update (ashubin)
...G...... [ZBX-13062] banned using of mutex in threads of metrics collection (MVekslers)
........S. [ZBX-13236] fixed error message of function parameters parse (MVekslers)
....I..... [ZBX-13398] fixed configure script for Debian GNU/Linux "buster" and "sid" to work with PostgreSQL (viktors)
..F....... [ZBX-13428] fixed long name of map outside go back button in map widget (agriscenko, Sasha)
A.F....... [ZBX-12754] fixed undefined index error in map import (gcalenko)
..F....... [ZBX-13166] fixed daily and yearly notification reports not including current day/last day of leap-year (nikita)
.......PS. [ZBX-13498] added optional MySQL upgrade patch for "problem" table to drop redundant index after another index that can be used to enforce the foreign key constraint has been created (vso)
........S. [ZBX-13452] fixed Elasticsearch history storage default value types (viktors)
..F....... [ZBX-12941] fixed checkbox overlay's position over the checkbox (miks)
..F....... [ZBX-13334] fixed translations of Widget parameters window (agriscenko)
A......... [ZBX-13248] changed field trapper_hosts to optional for trapper item.create (ashubin)
..F....... [ZBX-13307] fixed map scaling and position to the widget left side (ashubin)
A......... [ZBX-6118] fixed poor performance of changing an item on the template which linked with many hosts (Sasha)
..F....... [ZBX-13141] fixed invalid value for "Update interval" field in mass update form on submit was redirecting to items list (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.4.7
