@@ -3,6 +3,7 @@ Changes for 3.4.8rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12883] fixed incorrect ordering the list of triggers after saving a map (agriscenko)
 ..F....... [ZBX-12940] fixed content does not fit dialog window (agriscenko)
 ..F....... [ZBX-13401] fixed successful items mass update with invalid update interval (agriscenko)
 ..F....... [ZBX-13342] fixed order by query in frontend Maintenance tab (agriscenko)
